--- a/Web Browser Clone/Base.lproj/Main.storyboard
+++ b/Web Browser Clone/Base.lproj/Main.storyboard
@@ -1,25 +1,141 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="14F1509" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="A0q-MU-QP8">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--WebBrowser-->
+        <scene sceneID="ibZ-PX-cGi">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="FyO-J1-5S9" customClass="WebBrowserViewController" customModule="Web_Browser_Clone" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
+                        <viewControllerLayoutGuide type="top" id="SSt-iw-B7Q"/>
+                        <viewControllerLayoutGuide type="bottom" id="CIR-Oi-Ydt"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                    <view key="view" contentMode="scaleToFill" id="tax-L4-OE7">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="YJi-34-JjB">
+                                <rect key="frame" x="16" y="64" width="343" height="30"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="https:\\" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hus-Is-Rww">
+                                        <rect key="frame" x="0.0" y="0.0" width="56" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="56" id="5FM-As-kBK"/>
+                                            <constraint firstAttribute="height" constant="30" id="7Bz-TJ-1WI"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Web Address" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eWO-YD-3rK">
+                                        <rect key="frame" x="59" y="0.0" width="251" height="30"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" keyboardType="URL"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qJ6-p5-wAE">
+                                        <rect key="frame" x="313" y="0.0" width="30" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="Abk-zC-6Q6"/>
+                                            <constraint firstAttribute="width" constant="30" id="HxL-YT-l8I"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                        <state key="normal" title="Go">
+                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="goPressed:" destination="FyO-J1-5S9" eventType="touchUpInside" id="dxg-jD-KQh"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="P7E-A1-IDw">
+                                <rect key="frame" x="16" y="96" width="343" height="471"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </webView>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aAL-jE-GMC">
+                                <rect key="frame" x="16" y="569" width="343" height="44"/>
+                                <items>
+                                    <barButtonItem title="&lt;" style="plain" id="qKC-he-9fH">
+                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                        <connections>
+                                            <action selector="leftPressed:" destination="FyO-J1-5S9" id="vjv-22-hRa"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="GIV-ML-Yii">
+                                        <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                    </barButtonItem>
+                                    <barButtonItem title="ZoomIn" id="a3x-HG-0b5">
+                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                        <connections>
+                                            <action selector="zoomInPressed:" destination="FyO-J1-5S9" id="x1i-RG-L27"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="BIW-5M-8bD"/>
+                                    <barButtonItem title="ZoomOut" id="bt3-i4-suz">
+                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                        <connections>
+                                            <action selector="zoomOutPressed:" destination="FyO-J1-5S9" id="Pbd-GF-HaB"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="ydN-iM-9v1"/>
+                                    <barButtonItem title="&gt;" id="ByZ-hz-kk3">
+                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                        <connections>
+                                            <action selector="rightPressed:" destination="FyO-J1-5S9" id="ROP-6P-oLs"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="P7E-A1-IDw" firstAttribute="top" secondItem="YJi-34-JjB" secondAttribute="bottom" constant="2" id="CJF-Lz-Nmv"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="YJi-34-JjB" secondAttribute="trailing" id="Cb8-Si-22z"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="P7E-A1-IDw" secondAttribute="trailing" id="FnK-ey-eME"/>
+                            <constraint firstItem="aAL-jE-GMC" firstAttribute="top" secondItem="P7E-A1-IDw" secondAttribute="bottom" constant="2" id="Ocm-e9-YXi"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="aAL-jE-GMC" secondAttribute="trailing" id="SEl-Fj-rF3"/>
+                            <constraint firstItem="YJi-34-JjB" firstAttribute="leading" secondItem="tax-L4-OE7" secondAttribute="leadingMargin" id="Yks-BE-BMg"/>
+                            <constraint firstItem="CIR-Oi-Ydt" firstAttribute="top" secondItem="aAL-jE-GMC" secondAttribute="bottom" constant="10" id="aMc-vC-ghg"/>
+                            <constraint firstItem="P7E-A1-IDw" firstAttribute="leading" secondItem="tax-L4-OE7" secondAttribute="leadingMargin" id="n8a-pr-uNl"/>
+                            <constraint firstItem="YJi-34-JjB" firstAttribute="top" secondItem="SSt-iw-B7Q" secondAttribute="bottom" id="nvO-Lb-6ne"/>
+                            <constraint firstItem="aAL-jE-GMC" firstAttribute="leading" secondItem="tax-L4-OE7" secondAttribute="leadingMargin" id="yi4-nu-3pc"/>
+                        </constraints>
                     </view>
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" title="WebBrowser" id="aVX-BK-XW1"/>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <connections>
+                        <outlet property="webAddress" destination="eWO-YD-3rK" id="hjz-pY-ddq"/>
+                        <outlet property="webView" destination="P7E-A1-IDw" id="ZPR-Oh-V9I"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Qqi-Yq-bDv" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1868.5" y="-541.5"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="r4d-y1-7eg">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="A0q-MU-QP8" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="h9n-nC-Qm1">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="FyO-J1-5S9" kind="relationship" relationship="rootViewController" id="JKR-mP-jqA"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="suU-3n-LyP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1444.5" y="-541.5"/>
         </scene>
     </scenes>
 </document>
